Update gamming website (1).html

--- a/gamming website (1).html
+++ b/gamming website (1).html
@@ -48,7 +48,7 @@ body
         display: inline block;
         margin:  10px;
         padding: 12px ;
-        color: blue;
+        color: gray;
         border: .5px solid white;
         position: relative;
         z-index: 1;
